# requests-gssapi

./: .gitignore  .travis.install.sh  .travis.sh  .travis.yml  HISTORY.rst  ISSUE_TEMPLATE  README.rst  pyproject.toml  requirements.txt  setup.py  test_requests_gssapi.py
.copr/: Makefile
.github/: stale.yml
.github/workflows/: build.yml  ci.yml  stale.yml
requests_gssapi/: __init__.py  compat.py  exceptions.py  gssapi_.py
src/requests_gssapi/: __init__.py  compat.py  exceptions.py  gssapi_.py
tests/: test_requests_gssapi.py
